Añadir envio de información de la aplicación